--- a/demos/flask-sklearn-student-starter/Dockerfile
+++ b/demos/flask-sklearn-student-starter/Dockerfile
@@ -15,7 +15,7 @@ RUN pip install --upgrade pip &&\
 	pip install --trusted-host pypi.python.org -r requirements.txt
 
 ## Complete Step 4:
-Expose port 80
+Expose 80
 
 ## Complete Step 5:
 # Run app.py at container launch
